trying to connect planetscale

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,9 +1,9 @@
 # https://vercel.com/integrations/planetscale
-DATABASE_URL=
+DATABASE_URL=mysql://5ywos14wxsufqunnrjgu:************@aws.connect.psdb.cloud/techpacktest?ssl={"rejectUnauthorized":true}
 
 NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET= # Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
+NEXTAUTH_SECRET=https://generate-secret.now.sh/32
 
 # https://next-auth.js.org/providers/github
-GITHUB_ID=
-GITHUB_SECRET=
+GITHUB_ID=enkhboldtso
+GITHUB_SECRET=f06f0b5fb55651530d7dcb0323451a1f4eb1ea32
