nextauth_secret changed

--- a/.env.local.example
+++ b/.env.local.example
@@ -2,7 +2,7 @@
 DATABASE_URL=mysql://5ywos14wxsufqunnrjgu:************@aws.connect.psdb.cloud/techpacktest?ssl={"rejectUnauthorized":true}
 
 NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=https://generate-secret.now.sh/32
+NEXTAUTH_SECRET=142a5c87faf187680b50c8dab59c26d5
 
 # https://next-auth.js.org/providers/github
 GITHUB_ID=enkhboldtso
