commit with nexauth error

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,9 +1,10 @@
 # https://vercel.com/integrations/planetscale
-DATABASE_URL=mysql://5ywos14wxsufqunnrjgu:************@aws.connect.psdb.cloud/techpacktest?ssl={"rejectUnauthorized":true}
+DATABASE_URL='mysql://dt5carrc4cviexs2lr5r:************@aws.connect.psdb.cloud/techpacktest?sslaccept=strict'
 
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=142a5c87faf187680b50c8dab59c26d5
+NEXTAUTH_URL=http://localhost:3000/
+NEXTAUTH_SECRET=bed9a975e657119f066e598376851df2=
 
 # https://next-auth.js.org/providers/github
-GITHUB_ID=enkhboldtso
+GITHUB_ID=c6e94904b6081b58558f
 GITHUB_SECRET=f06f0b5fb55651530d7dcb0323451a1f4eb1ea32
+
