--- a/.env.local.example
+++ b/.env.local.example
@@ -1,8 +1,9 @@
 # https://vercel.com/integrations/planetscale
-DATABASE_URL='mysql://dt5carrc4cviexs2lr5r:************@aws.connect.psdb.cloud/techpacktest?sslaccept=strict'
+DATABASE_URL='mysql://5chj2ifg8ql87iokwufl:pscale_pw_WFVcnRby4s4mkHNFLH11oT2cdTxf7DXcs5HcZ242lHp@aws.connect.psdb.cloud/techpacktest?ssl={"rejectUnauthorized":true}'
 
-NEXTAUTH_URL=http://localhost:3000/
-NEXTAUTH_SECRET=bed9a975e657119f066e598376851df2=
+
+NEXTAUTH_URL=https://techpacktest.vercel.app/
+NEXTAUTH_SECRET=91df90cccc5ed4100b9c5a5c99903d9d
 
 # https://next-auth.js.org/providers/github
 GITHUB_ID=c6e94904b6081b58558f
