--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
     "tailwindcss": "^3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "yup": "^1.2.0"
   },
   "prettier": {
     "arrowParens": "always",
