--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,5 @@
 # https://vercel.com/integrations/planetscale
-DATABASE_URL='mysql://5chj2ifg8ql87iokwufl:pscale_pw_WFVcnRby4s4mkHNFLH11oT2cdTxf7DXcs5HcZ242lHp@aws.connect.psdb.cloud/techpacktest?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://43z2uoamab3w0vowqcsg:pscale_pw_NUBqHIQhn8ciXhOxc76jpk78VKxYtePveOCitFgB5gK@aws.connect.psdb.cloud/techpacktest?sslaccept=strict'
 
 
 NEXTAUTH_URL='http://localhost:3000/'
@@ -8,4 +8,3 @@ NEXTAUTH_SECRET='91df90cccc5ed4100b9c5a5c99903d9d'
 # https://next-auth.js.org/providers/github
 GITHUB_ID='c6e94904b6081b58558f'
 GITHUB_SECRET='f06f0b5fb55651530d7dcb0323451a1f4eb1ea32'
-
