--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # https://vercel.com/integrations/planetscale
-DATABASE_URL='mysql://43z2uoamab3w0vowqcsg:pscale_pw_NUBqHIQhn8ciXhOxc76jpk78VKxYtePveOCitFgB5gK@aws.connect.psdb.cloud/techpacktest?sslaccept=strict'
+DATABASE_URL='mysql://12kyrr62rgk3wxigntz5:pscale_pw_sHAsOw4TCRu5rU3GjAmCB1Zbg6jwUsP87mcgVDxUQlA@aws.connect.psdb.cloud/techpacktest?ssl={"rejectUnauthorized":true}'
 
 
 NEXTAUTH_URL='http://localhost:3000/'
