--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # https://vercel.com/integrations/planetscale
-DATABASE_URL='mysql://12kyrr62rgk3wxigntz5:pscale_pw_sHAsOw4TCRu5rU3GjAmCB1Zbg6jwUsP87mcgVDxUQlA@aws.connect.psdb.cloud/techpacktest?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://w9reuuknkn9fcbn7ttic:pscale_pw_tcjlKUYxtay456pERYq7rABK18aIPCrqKpaflZAiuKC@aws.connect.psdb.cloud/techpacktest?ssl={"rejectUnauthorized":true}'
 
 
 NEXTAUTH_URL='http://localhost:3000/'
