--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # https://vercel.com/integrations/planetscale
-DATABASE_URL='mysql://w9reuuknkn9fcbn7ttic:pscale_pw_tcjlKUYxtay456pERYq7rABK18aIPCrqKpaflZAiuKC@aws.connect.psdb.cloud/techpacktest?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://ej149qamtx9oz2tbsj2n:pscale_pw_nxaZAUtSvfNN38ak5WAHBZrMiAc1yF8HciBRkSOd8pq@aws.connect.psdb.cloud/techpacktest?ssl={"rejectUnauthorized":true}'
 
 
-NEXTAUTH_URL='http://localhost:3000/'
+NEXTAUTH_URL='https://techpacktest.vercel.app/'
 NEXTAUTH_SECRET='91df90cccc5ed4100b9c5a5c99903d9d'
 
 # https://next-auth.js.org/providers/github
